--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build:dll": "webpack --config ./webpack.dll.config.js",
+    "build": "webpack --config ./webpack.config.js"
   },
   "keywords": [],
   "author": "Juan <tecnosebastube@gmail.com>",
